--- a/gruppe.yml
+++ b/gruppe.yml
@@ -1,15 +1,20 @@
 # Bei "schicht" können Sie 'vormittags', 'nachmittags' oder 'egal' eintragen.
 
-gruppe: Unser cooler Name
-url: https://github.com/hhu-propra2/abschlussprojekt-orgas
+gruppe: Großbrandtmeister
+url: https://github.com/hhu-propra2/abschlussprojekt-grossbrandtmeister
 names:
-  - bendisposto
-  - n2o
-  - RutenkolkC
-  - ...
+  - Luca110
+  - amalb102
+  - TymurGubayev
+  - emily-n
+  - pascal2707
+  - zeynep68
+  - saray100
+  - Kukami
+  - Hanney100
 notebook: true
-schicht: vormittags
+schicht: nachmittags
 projektauswahl:
-  - projekt1
-  - projekt2
-  - projekt3
+  - Punkteübersicht
+  - Java in der Praxis
+  - Einreichung
