--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,13 +2,7 @@
 
 name: Gradle
 
-on:
-  push:
-    branches:
-      -master
-  pull_request:
-    branches:
-      -master
+on: [push, pull_request]
 
 jobs:
   build:
