--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,12 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'javax.mail:javax.mail-api:1.5.5'
+    }
+}
+
 plugins {
     id 'org.springframework.boot' version '2.2.5.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
@@ -24,7 +33,7 @@ configurations {
 repositories {
     mavenCentral()
     maven {
-        url="https://s3.cs.hhu.de/public/mops/"
+        url = "https://s3.cs.hhu.de/public/mops/"
         metadataSources {
             artifact()
         }
@@ -37,6 +46,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation "mops:styleguide:2.0.0"
+    compile 'org.springframework:spring-context-support'
+    compile 'javax.mail:mail:1.4.1'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
