--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ configurations {
 repositories {
     mavenCentral()
     maven {
-        url="https://s3.cs.hhu.de/public/mops/"
+        url = "https://s3.cs.hhu.de/public/mops/"
         metadataSources {
             artifact()
         }
@@ -46,6 +46,7 @@ dependencies {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
     testImplementation 'org.springframework.security:spring-security-test'
+    compile("org.springframework.boot:spring-boot-starter-actuator")
 }
 
 test {
