--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ management.endpoints.jmx.exposure.include=*
 management.endpoints.web.exposure.include=info, health, prometheus
 application.name=rheinjug2
 logging.pattern.console=[${application.name}],%magenta(%-5level),%d{dd-MM-yyyy HH:mm:ss.SSS}, %highlight(%msg),%thread,%logger.%M%n
+keycloak.principal-attribute=preferred_username
+keycloak.auth-server-url=https://keycloak.cs.hhu.de/auth
+keycloak.realm=MOPS
+keycloak.resource=demo
+keycloak.public-client=true
