add final email function

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ repositories {
     }
 }
 
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -49,6 +50,8 @@ dependencies {
     compile 'org.springframework:spring-context-support'
     compile 'javax.mail:mail:1.4.1'
     compileOnly 'org.projectlombok:lombok'
+    testCompile group: 'org.jvnet.mock-javamail', name: 'mock-javamail', version: '1.1'
+    testCompile group: 'com.icegreen', name: 'greenmail', version: '1.5.11'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
