--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ keycloak.auth-server-url=https://keycloak.cs.hhu.de/auth
 keycloak.realm=MOPS
 keycloak.resource=demo
 keycloak.public-client=true
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=15MB
+spring.servlet.multipart.max-request-size=1
