--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'org.keycloak.bom:keycloak-adapter-bom:3.3.0.Final'
     compile 'org.springframework:spring-context-support'
     compile 'javax.mail:mail:1.4.1'
+    compile 'io.minio:minio:6.0.13'
     compileOnly 'org.projectlombok:lombok'
     testCompile group: 'org.jvnet.mock-javamail', name: 'mock-javamail', version: '1.1'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
