--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ plugins {
     id 'org.springframework.boot' version '2.2.5.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
-    id 'com.github.spotbugs' version '3.0.0'
+    id "com.github.spotbugs" version "4.0.1"
     id 'pmd'
     id 'checkstyle'
 }
@@ -77,18 +77,8 @@ spotbugs {
     ignoreFailures = true
     effort = "max"
     reportLevel = "high"
-    toolVersion = "4.0.0-RC1"
 }
-tasks.withType(com.github.spotbugs.SpotBugsTask) {
-    reports {
-        html {
-            enabled = true
-        }
-        xml {
-            enabled = false
-        }
-    }
-}
+
 
 pmd {
     ignoreFailures = true
