--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Run tests
         run: gradle check
       - uses: actions/upload-artifact@v1
+        if: failure()
         with:
           name: test-index-html
           path: home/runner/work/abschlussprojekt-grossbrandtmeister/abschlussprojekt-grossbrandtmeister/build/reports/tests/test/index.html
