--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           args: zip -qq -r ./build/reports/tests.zip ./build/reports/tests
       - uses: actions/upload-artifact@v1
+        if: failure()
         with:
           name: build-reports-tests
           path: build/reports/tests.zip
