--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,12 +15,8 @@ jobs:
           java-version: 11
       - name: Run tests
         run: gradle check
-      - uses: montudor/action-zip@v0.1.0
-        if: failure()
-        with:
-          args: zip -qq -r ./build/reports/tests.zip ./build/reports/tests
       - uses: actions/upload-artifact@v1
-        if: failure()
+        if: success() || failure()
         with:
-          name: build-reports-tests
-          path: build/reports/tests.zip
+          name: build-reports
+          path: build/reports
