add `no-daemon` option

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           java-version: 11
       - name: Run tests
-        run: gradle check
+        run: gradle --no-daemon check
       - uses: actions/upload-artifact@v1
         if: success() || failure()
         with:
