--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,25 +2,25 @@
 
 name: Gradle
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
           java-version: 11
       - name: Run tests
         run: gradle check
-      - uses: montudor/action-zip@v0.1.0
-        if: failure()
-        with:
-          args: zip -qq -r ./build/reports/tests.zip ./build/reports/tests
       - uses: actions/upload-artifact@v1
-        if: failure()
+        if: success() || failure()
         with:
-          name: build-reports-tests
-          path: build/reports/tests.zip
+          name: build-reports
+          path: build/reports
