--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ keycloak.public-client=true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=50MB
-minio.buckek.name=grossbrandtmeister
+minio.bucket.name=grossbrandtmeister
 minio.default.folder=/
 minio.access.name=Q3AM3UQ867SPQQA43P2F
 minio.access.secret=zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG
-minio.url=http://127.0.0.1:9000
+minio.url=http://127.0.0.1:9001
