--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,6 @@ spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=50MB
 minio.bucket.name=grossbrandtmeister
 minio.default.folder=/
-minio.access.name=Q3AM3UQ867SPQQA43P2F
-minio.access.secret=zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG
+minio.access.name=minio
+minio.access.secret=minio123
 minio.url=http://127.0.0.1:9001
