--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     }
     testImplementation 'org.springframework.security:spring-security-test'
     testCompile 'com.tngtech.archunit:archunit-junit5:0.13.1'
+    compile group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.1'
 }
 
 test {
