--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ keycloak.auth-server-url=https://keycloak.cs.hhu.de/auth
 keycloak.realm=MOPS
 keycloak.resource=demo
 keycloak.public-client=true
+spring.datasource.initialization-mode=always
