--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation 'org.keycloak:keycloak-spring-boot-starter:9.0.0'
     implementation 'org.keycloak.bom:keycloak-adapter-bom:3.3.0.Final'
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
+    compile 'org.asciidoctor:asciidoctorj:2.2.0'
     compile 'org.springframework:spring-context-support'
     compile 'javax.mail:mail:1.4.1'
     compile 'io.minio:minio:6.0.13'
