--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.security.user.name=root
 spring.security.user.password=1234
 spring.security.user.roles=ADMIN
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=geheim
 management.endpoint.prometheus.enabled=true
 management.endpoints.jmx.exposure.include=*
 management.endpoints.web.exposure.include=info, health, prometheus
@@ -14,3 +14,5 @@ keycloak.realm=MOPS
 keycloak.resource=demo
 keycloak.public-client=true
 spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3308/rheinjug2
