rename `default`->`shared` to avoid confusion
also add a clarifying comment to it

--- a/src/main/resources/config/application-prod.properties
+++ b/src/main/resources/config/application-prod.properties
@@ -1,4 +1,4 @@
-spring.profiles.include=default 
+spring.profiles.include=shared
 spring.datasource.username=rheinjug2user
 spring.datasource.password=123
 spring.datasource.url=jdbc:mysql://localhost:3308/rheinjug2
