--- a/src/main/resources/config/application-test.properties
+++ b/src/main/resources/config/application-test.properties
@@ -1,4 +1,4 @@
-spring.profiles.include=default
+spring.profiles.include=shared
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.url=jdbc:h2:mem:rheinjug2
