--- a/src/main/resources/config/application-shared.properties
+++ b/src/main/resources/config/application-shared.properties
@@ -1,3 +1,5 @@
+#this isn't a full profile and should only be used
+#via spring.profiles.include
 spring.security.user.name=root
 spring.security.user.password=1234
 spring.security.user.roles=ADMIN
