--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.github.javafaker:javafaker:1.0.2'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
