--- a/src/main/resources/config/application-shared.properties
+++ b/src/main/resources/config/application-shared.properties
@@ -13,3 +13,11 @@ keycloak.auth-server-url=https://keycloak.cs.hhu.de/auth
 keycloak.realm=MOPS
 keycloak.resource=demo
 keycloak.public-client=true
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=15MB
+spring.servlet.multipart.max-request-size=50MB
+minio.bucket.name=grossbrandtmeister
+minio.default.folder=/
+minio.access.name=minio
+minio.access.secret=minio123
+minio.url=http://127.0.0.1:9001
