make checkstyle warnings fail build

--- a/build.gradle
+++ b/build.gradle
@@ -85,6 +85,8 @@ spotbugs {
 checkstyle {
     toolVersion = "8.28"
     configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
+    ignoreFailures = false
+    maxWarnings = 0
 }
 
 pmd {
