add scheduler for fetching meetup.com events, configure with application.api-pump.delay

--- a/src/main/resources/config/application-dev.properties
+++ b/src/main/resources/config/application-dev.properties
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:h2:mem:rheinjug2
 spring.datasource.initialization-mode=always
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 logging.level.=trace
+application.api-pump.delay=60000
