--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     testCompile 'com.tngtech.archunit:archunit-junit5:0.13.1'
     compile group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.19'
     compile group: 'com.sun.istack', name: 'istack-commons-runtime', version: '3.0.10'
+    compile group: 'com.atlassian.commonmark', name: 'commonmark', version: '0.14.0'
 }
 
 test {
