add Event.duration, .deadline; EventRef.deadline

--- a/src/main/resources/config/application-dev.properties
+++ b/src/main/resources/config/application-dev.properties
@@ -4,7 +4,7 @@ spring.datasource.password=
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.initialization-mode=always
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-logging.level.=trace
+logging.level.mops.rheinjug2=debug
 application.api-pump.delay=60000
 spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.enabled=true
