--- a/build.gradle
+++ b/build.gradle
@@ -70,8 +70,8 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'com.tngtech.keycloakmock:mock-junit5:0.2.0'
     testCompile 'com.tngtech.archunit:archunit-junit5:0.13.1'
-    testImplementation "org.testcontainers:testcontainers:1.12.4"
-    testImplementation "org.testcontainers:junit-jupiter:1.12.4"
+    testCompile "org.testcontainers:testcontainers:1.13.0"
+    testCompile "org.testcontainers:junit-jupiter:1.13.0"
     compile group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.19'
     compile group: 'com.sun.istack', name: 'istack-commons-runtime', version: '3.0.10'
     compile group: 'com.atlassian.commonmark', name: 'commonmark', version: '0.14.0'
