--- a/src/main/resources/config/application-shared.properties
+++ b/src/main/resources/config/application-shared.properties
@@ -21,4 +21,4 @@ minio.default.folder=/
 minio.access.name=minio
 minio.access.secret=minio123
 minio.url=http://127.0.0.1:9001
-email.recipient="luca.krahn@hhu.de"
+email.recipient="Pascal.Meinhard@hhu.de"
