--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,7 +4,7 @@ name: Gradle
 
 on:
   push:
-    branches: [ master ]
+    branches: [ testfileservice ]
   pull_request:
     branches: [ master ]
 
