--- a/src/main/resources/config/application-shared.properties
+++ b/src/main/resources/config/application-shared.properties
@@ -11,8 +11,12 @@ logging.pattern.console=[${application.name}],%magenta(%-5level),%d{dd-MM-yyyy H
 keycloak.principal-attribute=preferred_username
 keycloak.auth-server-url=https://keycloak.cs.hhu.de/auth
 keycloak.realm=MOPS
-keycloak.resource=demo
-keycloak.public-client=true
+keycloak.resource=rheinjug
+keycloak.verify-token-audience=true
+keycloak.use-resource-role-mappings=true
+keycloak.credentials.secret=1124e1c1-e560-4f44-84f1-ba60ca6e58c3
+keycloak.autodetect-bearer-only=true
+keycloak.confidential-port=443
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=50MB
