--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,73 +14,19 @@ services:
       MYSQL_ROOT_PASSWORD: geheim
       MYSQL_DATABASE: rheinjug2
 
-  minio1:
-    image: minio/minio:RELEASE.2020-03-06T22-23-56Z
+  minio:
+    image: minio/minio
     volumes:
       - data1-1:/data1
       - data1-2:/data2
     ports:
-      - "9001:9000"
+      - 9001:9000
     environment:
-      MINIO_ACCESS_KEY: minio
-      MINIO_SECRET_KEY: minio123
-    command: server http://minio{1...4}/data{1...2}
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
+      - MINIO_ACCESS_KEY=minio
+      - MINIO_SECRET_KEY=minio123
+    command: "server /data/"
 
-  minio2:
-    image: minio/minio:RELEASE.2020-03-06T22-23-56Z
-    volumes:
-      - data2-1:/data1
-      - data2-2:/data2
-    ports:
-      - "9002:9000"
-    environment:
-      MINIO_ACCESS_KEY: minio
-      MINIO_SECRET_KEY: minio123
-    command: server http://minio{1...4}/data{1...2}
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
 
-  minio3:
-    image: minio/minio:RELEASE.2020-03-06T22-23-56Z
-    volumes:
-      - data3-1:/data1
-      - data3-2:/data2
-    ports:
-      - "9003:9000"
-    environment:
-      MINIO_ACCESS_KEY: minio
-      MINIO_SECRET_KEY: minio123
-    command: server http://minio{1...4}/data{1...2}
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
-
-  minio4:
-    image: minio/minio:RELEASE.2020-03-06T22-23-56Z
-    volumes:
-      - data4-1:/data1
-      - data4-2:/data2
-    ports:
-      - "9004:9000"
-    environment:
-      MINIO_ACCESS_KEY: minio
-      MINIO_SECRET_KEY: minio123
-    command: server http://minio{1...4}/data{1...2}
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
 
 ## By default this config uses default local driver,
 ## For custom volumes replace with volume driver configuration.
@@ -88,9 +34,3 @@ volumes:
   my-db:
   data1-1:
   data1-2:
-  data2-1:
-  data2-2:
-  data3-1:
-  data3-2:
-  data4-1:
-  data4-2:
