change email properties
Co-authored-by: Luca110 <Luca10399@yahoo.de>

--- a/src/main/resources/config/application-dev.properties
+++ b/src/main/resources/config/application-dev.properties
@@ -9,3 +9,4 @@ application.api-pump.delay=60000
 spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+application.email.recipient="Pascal.Meinhard@hhu.de"
