--- a/src/main/resources/config/application-prod.properties
+++ b/src/main/resources/config/application-prod.properties
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:mysql://localhost:3308/rheinjug2
 # in prod we need to initialize the DB once.
 spring.datasource.initialization-mode=never
 application.api-pump.delay=3631739
+application.email.recipient="jens email"
