--- a/src/main/resources/config/application-shared.properties
+++ b/src/main/resources/config/application-shared.properties
@@ -6,6 +6,7 @@ spring.security.user.roles=ADMIN
 management.endpoint.prometheus.enabled=true
 management.endpoints.jmx.exposure.include=*
 management.endpoints.web.exposure.include=info, health, prometheus
+management.endpoints.web.base-path=/rheinjug2/actuator
 application.name=rheinjug2
 logging.pattern.console=[${application.name}],%magenta(%-5level),%d{dd-MM-yyyy HH:mm:ss.SSS}, %highlight(%msg),%thread,%logger.%M%n
 keycloak.principal-attribute=preferred_username
