setup docker-compose to run the app

--- a/build.gradle
+++ b/build.gradle
@@ -108,3 +108,8 @@ jacocoTestReport {
         html.destination file("${buildDir}/reports/jacocoHtml")
     }
 }
+
+def profiles = 'prod'
+bootRun {
+    args = ["--spring.profiles.active=" + profiles]
+}
