--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
       - my-db:/var/lib/mysql
     ports:
       - 3308:3306
+    expose:
+      - "3306"
     environment:
       MYSQL_ROOT_PASSWORD: geheim
       MYSQL_DATABASE: rheinjug2
@@ -81,6 +83,18 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
+  app:
+    image: gradle:jdk11
+    restart: always
+    working_dir: /rheinjug2
+    volumes:
+      - ./:/rheinjug2
+    expose:
+      - "8080"
+    depends_on:
+      - database
+      - minio1
+    command: gradle bootRun
 
 ## By default this config uses default local driver,
 ## For custom volumes replace with volume driver configuration.
