--- a/src/main/resources/config/application-shared.properties
+++ b/src/main/resources/config/application-shared.properties
@@ -21,3 +21,4 @@ minio.default.folder=/
 minio.access.name=minio
 minio.access.secret=minio123
 minio.url=http://127.0.0.1:9001
+application.email.recipient="pascal.meinhard@hhu.de"
