refactor creditpointcontroller and add tests (#124)
Co-authored-by: Luca110 <Luca10399@yahoo.de>

--- a/src/main/resources/config/application-prod.properties
+++ b/src/main/resources/config/application-prod.properties
@@ -7,3 +7,4 @@ spring.datasource.url=jdbc:mysql://database:3306/rheinjug2
 # in prod we need to initialize the DB once.
 spring.datasource.initialization-mode=always
 application.api-pump.delay=3631739
+application.email.recipient="jens email"
