--- a/src/main/resources/config/application-shared.properties
+++ b/src/main/resources/config/application-shared.properties
@@ -26,4 +26,4 @@ minio.default.folder=/
 minio.access.name=minio
 minio.access.secret=minio123
 minio.url=http://127.0.0.1:9001
-email.recipient="Pascal.Meinhard@hhu.de"
+application.email.recipient="pascal.meinhard@hhu.de"
