--- a/src/main/resources/config/application-dev.properties
+++ b/src/main/resources/config/application-dev.properties
@@ -10,3 +10,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 application.email.recipient="Pascal.Meinhard@hhu.de"
+minio.url=http://127.0.0.1:9000
