--- a/src/main/resources/config/application-shared.properties
+++ b/src/main/resources/config/application-shared.properties
@@ -22,8 +22,8 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=50MB
 minio.bucket.name=grossbrandtmeister
-minio.default.folder=/
 minio.access.name=minio
 minio.access.secret=minio123
-minio.url=http://127.0.0.1:9001
+minio.url=http://minio:9000
+minio.default.folder=/
 application.email.recipient="pascal.meinhard@hhu.de"
