--- a/src/main/resources/config/application-dev.properties
+++ b/src/main/resources/config/application-dev.properties
@@ -11,3 +11,4 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 application.email.recipient="Pascal.Meinhard@hhu.de"
 minio.url=http://127.0.0.1:9000
+minio.access.secret=minio1234
