--- a/src/main/resources/config/application-prod.properties
+++ b/src/main/resources/config/application-prod.properties
@@ -8,3 +8,4 @@ spring.datasource.url=jdbc:mysql://database:3306/rheinjug2
 spring.datasource.initialization-mode=always
 application.api-pump.delay=3631739
 application.email.recipient="jens email"
+minio.url=http://minio:9000
