--- a/src/main/resources/config/application-test.properties
+++ b/src/main/resources/config/application-test.properties
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:h2:mem:rheinjug2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.initialization-mode=always
 application.email.recipient="dummyemail@rheinjug2.de"
+minio.url=http://127.0.0.1:9000
